# tablecloth

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  runner.py  setup.cfg
src/tablecloth/: cli.py  runner.py
